[gd_scene load_steps=4 format=2]

[ext_resource path="res://interface/register/Register.gd" type="Script" id=1]
[ext_resource path="res://interface/Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/fonts/montserrat_eb_64.tres" type="DynamicFont" id=3]

[node name="Register" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="Container" instance=ExtResource( 2 )]
text = "REGISTER"

[node name="RegisterBox" type="VBoxContainer" parent="Container"]
margin_top = 207.0
margin_right = 1870.0
margin_bottom = 604.0
custom_constants/separation = 15

[node name="EmailBox" type="HBoxContainer" parent="Container/RegisterBox"]
margin_left = 222.0
margin_right = 1647.0
margin_bottom = 89.0
rect_min_size = Vector2( 1425, 0 )
size_flags_horizontal = 6
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/RegisterBox/EmailBox"]
margin_top = 5.0
margin_right = 650.0
margin_bottom = 84.0
rect_min_size = Vector2( 650, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Email:"
align = 2

[node name="LineEdit" type="LineEdit" parent="Container/RegisterBox/EmailBox"]
margin_left = 675.0
margin_right = 1425.0
margin_bottom = 89.0
rect_min_size = Vector2( 750, 0 )
size_flags_horizontal = 11
custom_fonts/font = ExtResource( 3 )
caret_blink = true

[node name="PasswordBox" type="HBoxContainer" parent="Container/RegisterBox"]
margin_left = 222.0
margin_top = 104.0
margin_right = 1647.0
margin_bottom = 193.0
rect_min_size = Vector2( 1425, 0 )
size_flags_horizontal = 6
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/RegisterBox/PasswordBox"]
margin_top = 5.0
margin_right = 650.0
margin_bottom = 84.0
rect_min_size = Vector2( 650, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Password:"
align = 2

[node name="LineEdit" type="LineEdit" parent="Container/RegisterBox/PasswordBox"]
margin_left = 675.0
margin_right = 1425.0
margin_bottom = 89.0
rect_min_size = Vector2( 750, 0 )
size_flags_horizontal = 11
custom_fonts/font = ExtResource( 3 )
secret = true
caret_blink = true

[node name="ConfirmPasswordBox" type="HBoxContainer" parent="Container/RegisterBox"]
margin_left = 200.0
margin_top = 208.0
margin_right = 1670.0
margin_bottom = 297.0
rect_min_size = Vector2( 1425, 0 )
size_flags_horizontal = 6
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/RegisterBox/ConfirmPasswordBox"]
margin_top = 5.0
margin_right = 695.0
margin_bottom = 84.0
rect_min_size = Vector2( 650, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Confirm Password:"
align = 2

[node name="LineEdit" type="LineEdit" parent="Container/RegisterBox/ConfirmPasswordBox"]
margin_left = 720.0
margin_right = 1470.0
margin_bottom = 89.0
rect_min_size = Vector2( 750, 0 )
size_flags_horizontal = 11
custom_fonts/font = ExtResource( 3 )
secret = true
caret_blink = true

[node name="RegisterButton" type="Button" parent="Container/RegisterBox"]
margin_left = 789.0
margin_top = 312.0
margin_right = 1080.0
margin_bottom = 397.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "SUBMIT"

[node name="Notification" type="Label" parent="Container"]
margin_top = 654.0
margin_right = 1870.0
margin_bottom = 733.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
align = 1
autowrap = true

[connection signal="pressed" from="Container/RegisterBox/RegisterButton" to="." method="_on_RegisterButton_pressed"]
